loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:9: error: '(' expected but identifier found.
  if estSurRose() {
     ^LoopStairs:12: error: illegal start of simple expression
} 
^